# codebuddy-light

./: README.md  index.html
.github/workflows/: ci.yml
hooks/: status_writer.ps1  status_writer.py
scripts/: simulate.py
src/: main.ts  styles.css
src-tauri/: Cargo.toml
src-tauri/src/: hooks.rs  lib.rs  remote_bridge.rs  sessions.rs
